Updated layout for text box
Updated layout for text box so that it can be an editable one (i.e., the user can edit the description if they would like to refine it)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div id="result" style="display: none;">
             <h2>Generated Text</h2>
-            <p id="generated-text"></p>
+            <textarea id="generated-text" rows="8" placeholder="Generated description will appear here. You can edit it manually if you would like to refine it."></textarea>
         </div>
     </div>
 
@@ -99,8 +99,9 @@
                 const responseData = await response.json();
                 const generatedText = responseData.description;
 
-                document.getElementById('generated-text').textContent = generatedText;
-                document.getElementById('result').style.display = 'block';
+                const textarea = document.getElementById('generated-text');
+                textarea.value = generatedText;
+                textArea.readOnly = false; // This is for allowing editing after generation                 			          document.getElementById('result').style.display = 'block';
             } catch (error) {
                 console.error('Error generating description:', error);
                 alert('Failed to generate pet description. Please try again later.');
