--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 const textarea = document.getElementById('generated-text');
                 textarea.value = generatedText;
 
-textArea.readOnly = false; // This is for allowing editing after generation                 	
+textarea.readOnly = false; // This is for allowing editing after generation                 	
 
 document.getElementById('result').style.display = 'block';
             } catch (error) {
